feat: add docker (sprint 16)